# ds-chronicles

./: LICSENSE  README.md
kv-store/: Cargo.toml
kv-store/src/: client.rs  handler.rs  main.rs
kv-store/src/protocol/: mod.rs  parser.rs  writer.rs
kvstore/: Cargo.toml
kvstore/src/: client.rs  executor.rs  handler.rs  lib.rs  main.rs  server.rs
kvstore/src/protocol/: mod.rs  parser.rs  writer.rs
kvstore/src/storage/: memory.rs  mod.rs  storage.rs
kvstore/tests/: client.rs
