[package]
name = "kvstore"
version = "0.1.0"
authors = ["chermehdi <mehdi.cheracher@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
tokio-stream = "0.1"
bytes = "1.0.1"
atoi = "0.4.0"
